' Generated by UML Generator
' Encoded: hLNTRjCm5BxFKrYzIaKxPTaOD1hLiZQ3QFrJam7Y9l8IhxD8xCvn9iOOLpm0WWik0F4At82Gq7Y6y4ROphAswQODQHTrpy-NxxFFEKwsKWuPpv9OIrzYCeKC9Y2COPhQd3Eydt7aXfHu-3K2XdQ88mH2pC8OQHec7B4362BGXHnwD6F2FDK0U3jbz5WWzP1cX5j00EiMw6GffudD63pfuPHl-ctjJDEK5DZ1CThEqZcEvgdO5yVX6NZYs5rd7FJSWUC5_Z3mTjsHuWIFmEe2SiSTUtxGjNrReOF1Nd_R6PTOKsAda1zQO2HMwOKqGg45X797MZ9q36CSGKwP1PwMvgO0j6MIPdoQYGEDcA3qE4CmaU6cMEuj746VwJH0HQK1hjMetnLH0ronLSL-gzQKvnKYGiWcqGKxqcDCa0K47oQJ1f3U84ls4IkPXbEEAO5nGN7Ptpua6Oolwt3VVXxOlk_qHxvNTckjw0z9QIm4EuNX3cziaUf5HKvVvhcf2VzL9b7SIDZFC3yS8r4QbEfrrQOoEKP76MOewebwoLHHlrbvN29wrObfYY8FJqJvYckq5DRhisV6a4GqkRQamwxJyuBHSDYpWDfieTaMfPNk2ZtGQ_dd_5V-Fl_Kl6-sp5e3rF8loZMDDULzKzwQQQmhzqF-9_-T_yo_v-VYkVFcXld0K8cl-O-_xqgYbWpjsiSlckjb_gDwKEOtJFEX3FNjWTW69Q23-KcjlhXrTn2CXtj-zVwkBitCLQXMgxN4rdTxZltOiK1CoKHWZ2McAi8C3CEGlzlDMwKN-XtErWGHnCJDKpmYE3zPIhKlRcWyDrIN2PTmFS542JH00b-LKcATeNhYm0LC7lq29yrwyIS7Rl7jlBBofZttnjUgTxkQhmvgDR-5I2G-F_y0
' URL: http://www.plantuml.com/plantuml/uml/hLNTRjCm5BxFKrYzIaKxPTaOD1hLiZQ3QFrJam7Y9l8IhxD8xCvn9iOOLpm0WWik0F4At82Gq7Y6y4ROphAswQODQHTrpy-NxxFFEKwsKWuPpv9OIrzYCeKC9Y2COPhQd3Eydt7aXfHu-3K2XdQ88mH2pC8OQHec7B4362BGXHnwD6F2FDK0U3jbz5WWzP1cX5j00EiMw6GffudD63pfuPHl-ctjJDEK5DZ1CThEqZcEvgdO5yVX6NZYs5rd7FJSWUC5_Z3mTjsHuWIFmEe2SiSTUtxGjNrReOF1Nd_R6PTOKsAda1zQO2HMwOKqGg45X797MZ9q36CSGKwP1PwMvgO0j6MIPdoQYGEDcA3qE4CmaU6cMEuj746VwJH0HQK1hjMetnLH0ronLSL-gzQKvnKYGiWcqGKxqcDCa0K47oQJ1f3U84ls4IkPXbEEAO5nGN7Ptpua6Oolwt3VVXxOlk_qHxvNTckjw0z9QIm4EuNX3cziaUf5HKvVvhcf2VzL9b7SIDZFC3yS8r4QbEfrrQOoEKP76MOewebwoLHHlrbvN29wrObfYY8FJqJvYckq5DRhisV6a4GqkRQamwxJyuBHSDYpWDfieTaMfPNk2ZtGQ_dd_5V-Fl_Kl6-sp5e3rF8loZMDDULzKzwQQQmhzqF-9_-T_yo_v-VYkVFcXld0K8cl-O-_xqgYbWpjsiSlckjb_gDwKEOtJFEX3FNjWTW69Q23-KcjlhXrTn2CXtj-zVwkBitCLQXMgxN4rdTxZltOiK1CoKHWZ2McAi8C3CEGlzlDMwKN-XtErWGHnCJDKpmYE3zPIhKlRcWyDrIN2PTmFS542JH00b-LKcATeNhYm0LC7lq29yrwyIS7Rl7jlBBofZttnjUgTxkQhmvgDR-5I2G-F_y0
' Generated on: 2026-09-13T15:05:50.042916300

@startuml
skinparam classAttributeIconSize 0
hide circle

interface DataSource {
  ~provide(count: int): CustomArrayList<T>
}

class FileBusSource {
  -{static} HEADER_LINES_TO_SKIP: int = 1
  -{static} FIRST_DATA_LINE_NUMBER: int = 2
  -path: Path
  -codec: BusCodec
  -validator: Validator<Bus>
  -output: PrintStream
  --
  +FileBusSource(path: Path, codec: BusCodec, validator: Validator<Bus>)
  +FileBusSource(path: Path, codec: BusCodec, validator: Validator<Bus>, output: PrintStream)
  +provide(count: int): CustomArrayList<Bus>
  -decodeAndValidate(line: String, lineNumber: int): Optional<Bus>
}

class ManualBusSource {
  -{static} MAX_ATTEMPTS: int = 3
  -console: ConsoleIO
  -validator: Validator<Bus>
  --
  +ManualBusSource(console: ConsoleIO, validator: Validator<Bus>)
  +provide(count: int): CustomArrayList<Bus>
  -readBusWithRetries(): Bus
  -readRequiredLine(): String
}

class InputClosedSignal {
  ~InputClosedSignal()
}

class RandomBusSource {
  -{static} MODELS_POOL: List<String> = List.of("ЛиАЗ-5292", "МАЗ-203", "ПАЗ-3204", "Волжанин-6270", "НефАЗ-5299", "KAvZ-4270", "ГолАЗ-6228", "MAN Lion City")
  -{static} MIN_ROUTE_NUMBER: int = 1
  -{static} MAX_ROUTE_NUMBER: int = 999
  -{static} MIN_MILEAGE: long = 0
  -{static} MAX_MILEAGE: long = 2_000_000
  -validator: Validator<Bus>
  --
  +RandomBusSource(validator: Validator<Bus>)
  +provide(count: int): CustomArrayList<Bus>
  -generateValidBus(): Bus
  -randomModel(): String
  -randomInt(min: int, max: int): int
  -randomLong(min: long, max: long): long
}

FileBusSource ..|> DataSource
ManualBusSource ..|> DataSource
RandomBusSource ..|> DataSource
@enduml